Добавил DTO и сервис для категорий и подкатегорий. Добавил контролер для категорий и подкатегорий.

--- a/Marketplace/Marketplace.csproj
+++ b/Marketplace/Marketplace.csproj
@@ -13,16 +13,14 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="8.0.2" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
     <PackageReference Include="System.Configuration.ConfigurationManager" Version="8.0.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Controllers\" />
-  </ItemGroup>
-
-  <ItemGroup>
     <ProjectReference Include="..\Marketplace.Context\Marketplace.Context.csproj" />
+    <ProjectReference Include="..\Marketplace.DTO\Marketplace.DTO.csproj" />
   </ItemGroup>
 
 </Project>
