Добавил бренд, глобальные категории. У всех видов категорий добавил альтернативное имя. Добавил сервис для получения данных по глобальным категориям и тестовый класс

--- a/Marketplace.Tests/Marketplace.Tests.csproj
+++ b/Marketplace.Tests/Marketplace.Tests.csproj
@@ -19,6 +19,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Marketplace.Context\Marketplace.Context.csproj" />
+    <ProjectReference Include="..\Marketplace.DTO\Marketplace.DTO.csproj" />
   </ItemGroup>
 
   <ItemGroup>
